added progres arrows and beginning of score to funnel also a lot of responsive fixes

--- a/loan-types.html
+++ b/loan-types.html
@@ -86,7 +86,7 @@
                 <!-- Start Survey container -->
                 <div id="survey_container">
                     <form name="loan-form" id="wrapped" action="send-action" method="POST">
-                        <div id="middle-wizard">
+                        <div id="middle-wizard" class="compare-box">
                             <div class="step row">
                                 <div class="col-xs-12 main-title">
                                     <h3>Select the best loan for your business.</h3>
@@ -148,38 +148,6 @@
                             <a role="button" href="steps.html" title="Next" class="button-medium forward"> Next </a>
                         </div>
                     </form>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h3>Identify a Business Loan</h3>
-                        <h4>Get $5,000 - $250,000 in 2 days</h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 col-sm-4 box">
-                        <div class="number-circle">1</div>
-                        <h4>Lorem ipsum</h4>
-                        <p>
-                        Lorem ipsum dolor sit amet, in porro albucius qui, in nec quod novum accumsan, mei ludus tamquam dolores id. No sit debitis meliore postulant, per ex prompta alterum sanctus, pro ne quod dicunt sensibus.
-                        </p>
-                        <a href="#" title="read more" class="button-medium">Read more</a>
-                    </div>
-                    <div class="col-xs-12 col-md-4 col-sm-4 box">
-                        <div class="number-circle">2</div>
-                        <h4>Lorem ipsum</h4>
-                        <p>
-                        Lorem ipsum dolor sit amet, in porro albucius qui, in nec quod novum accumsan, mei ludus tamquam dolores id. No sit debitis meliore postulant, per ex prompta alterum sanctus, pro ne quod dicunt sensibus.
-                        </p>
-                        <a href="#" title="read more" class="button-medium">Read more</a>
-                    </div>
-                    <div class="col-xs-12 col-md-4 col-sm-4 box">
-                        <div class="number-circle">3</div>
-                        <h4>Lorem ipsum</h4>
-                        <p>
-                        Lorem ipsum dolor sit amet, in porro albucius qui, in nec quod novum accumsan, mei ludus tamquam dolores id. No sit debitis meliore postulant, per ex prompta alterum sanctus, pro ne quod dicunt sensibus.
-                        </p>
-                        <a href="#" title="read more" class="button-medium">Read more</a>
-                    </div>
                 </div>
             </section>
         <footer>
