--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <h3>Identify a Business Loan</h3>
-                        <h4>Get $5,000 - $250,000 in 2 days</h4>
+                        <h4>Get $5,000 - $500,000 in 2 days</h4>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-md-4 col-sm-4 box">
-                        <div class="number-circle">1</div>
+                        <!-- <div class="number-circle">1</div> -->
                         <h4>Lorem ipsum</h4>
                         <p>
                         Lorem ipsum dolor sit amet, in porro albucius qui, in nec quod novum accumsan, mei ludus tamquam dolores id. No sit debitis meliore postulant, per ex prompta alterum sanctus, pro ne quod dicunt sensibus.
@@ -132,7 +132,7 @@
                         <a href="#" title="read more" class="button-medium">Read more</a>
                     </div>
                     <div class="col-xs-12 col-md-4 col-sm-4 box">
-                        <div class="number-circle">2</div>
+                        <!-- <div class="number-circle">2</div> -->
                         <h4>Lorem ipsum</h4>
                         <p>
                         Lorem ipsum dolor sit amet, in porro albucius qui, in nec quod novum accumsan, mei ludus tamquam dolores id. No sit debitis meliore postulant, per ex prompta alterum sanctus, pro ne quod dicunt sensibus.
@@ -140,7 +140,7 @@
                         <a href="#" title="read more" class="button-medium">Read more</a>
                     </div>
                     <div class="col-xs-12 col-md-4 col-sm-4 box">
-                        <div class="number-circle">3</div>
+                        <!-- <div class="number-circle">3</div> -->
                         <h4>Lorem ipsum</h4>
                         <p>
                         Lorem ipsum dolor sit amet, in porro albucius qui, in nec quod novum accumsan, mei ludus tamquam dolores id. No sit debitis meliore postulant, per ex prompta alterum sanctus, pro ne quod dicunt sensibus.
