removed main id and added confirmation page

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <a href="loan-types.html" title="find a loan" class="button-large">Find a loan</a>
                 </div>
             </section>
-            <section class="container" id="main">
+            <section class="container" >
                 <div class="row">
                     <div class="col-xs-12">
                         <h3>Identify a Business Loan</h3>
