--- a/loan-types.html
+++ b/loan-types.html
@@ -82,7 +82,7 @@
                     <div id="progressbar"></div>
                 </div> -->
             </section>
-            <section class="container" id="main">
+            <section class="container" >
                 <!-- Start Survey container -->
                 <div id="survey_container">
                     <form name="loan-form" id="wrapped" action="send-action" method="POST">
