--- a/steps.html
+++ b/steps.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>
             </section>
-            <section class="container" id="main">
+            <section class="container" >
                 <!-- Start Survey container -->
                 <div id="survey_container">
                     <form name="loan-form" id="wrapped" action="send-action" method="POST">
