--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
                 </nav>
             </header>
         </section>
-        <section class="container" id="main">
+        <section class="container" >
             <div class="row">
                 <div class="col-sm-3">
                     <nav class="nav-sidebar">
