--- a/loan-results.html
+++ b/loan-results.html
@@ -82,7 +82,7 @@
                     <div id="progressbar"></div>
                 </div> -->
             </section>
-            <section class="container" id="main">
+            <section class="container" >
                 <!-- Start Survey container -->
                 <div id="survey_container">
                     <form name="loan-form" id="wrapped" action="send-action" method="POST">
@@ -120,7 +120,7 @@
                                                 <a href="#" class="list-group-item">
                                                     <div class="media col-sm-3">
                                                         <figure class="pull-left">
-                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="placehold.it/350x150">
+                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="logo">
                                                         </figure>
                                                     </div>
                                                     <div class="col-sm-2">
@@ -152,7 +152,7 @@
                                                 <a href="#" class="list-group-item">
                                                     <div class="media col-sm-3">
                                                         <figure class="pull-left">
-                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="placehold.it/350x150">
+                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="logo">
                                                         </figure>
                                                     </div>
                                                     <div class="col-sm-2">
@@ -184,7 +184,7 @@
                                                 <a href="#" class="list-group-item">
                                                     <div class="media col-sm-3">
                                                         <figure class="pull-left">
-                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="placehold.it/350x150">
+                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="logo">
                                                         </figure>
                                                     </div>
                                                     <div class="col-sm-2">
@@ -219,7 +219,7 @@
                                                 <a href="#" class="list-group-item">
                                                     <div class="media col-sm-3">
                                                         <figure class="pull-left">
-                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="placehold.it/350x150">
+                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="logo">
                                                         </figure>
                                                     </div>
                                                     <div class="col-sm-2">
@@ -251,7 +251,7 @@
                                                 <a href="#" class="list-group-item">
                                                     <div class="media col-sm-3">
                                                         <figure class="pull-left">
-                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="placehold.it/350x150">
+                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="logo">
                                                         </figure>
                                                     </div>
                                                     <div class="col-sm-2">
