--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <a href="loan-types.html" title="find a loan" class="button-large">Find a loan</a>
                 </div>
             </section>
-            <section class="container" >
+            <section class="container secondary-hero">
                 <div class="row">
                     <div class="col-xs-12">
                         <h3>Identify a Business Loan</h3>
@@ -125,27 +125,21 @@
                 <div class="row">
                     <div class="col-xs-12 col-md-4 col-sm-4 box">
                         <!-- <div class="number-circle">1</div> -->
-                        <h4>Lorem ipsum</h4>
-                        <p>
-                        Lorem ipsum dolor sit amet, in porro albucius qui, in nec quod novum accumsan, mei ludus tamquam dolores id. No sit debitis meliore postulant, per ex prompta alterum sanctus, pro ne quod dicunt sensibus.
-                        </p>
-                        <a href="#" title="read more" class="button-medium">Read more</a>
+                        <h4>Your Business</h4>
+                        <p>has unique lending needs. Find the loan type that best fits those needs.</p>
+                        <a href="#" title="learn more" class="button-medium">Learn more <i class="fa  fa-caret-right"></i></a>
                     </div>
                     <div class="col-xs-12 col-md-4 col-sm-4 box">
                         <!-- <div class="number-circle">2</div> -->
-                        <h4>Lorem ipsum</h4>
-                        <p>
-                        Lorem ipsum dolor sit amet, in porro albucius qui, in nec quod novum accumsan, mei ludus tamquam dolores id. No sit debitis meliore postulant, per ex prompta alterum sanctus, pro ne quod dicunt sensibus.
-                        </p>
-                        <a href="#" title="read more" class="button-medium">Read more</a>
+                        <h4>Sageworks Lending</h4>
+                        <p>identifies the perfect loan alternatives for your business.</p>
+                        <a href="how-we-help.html" title="read more" class="button-medium">Show how we help <i class="fa  fa-caret-right"></i></a>
                     </div>
                     <div class="col-xs-12 col-md-4 col-sm-4 box">
                         <!-- <div class="number-circle">3</div> -->
-                        <h4>Lorem ipsum</h4>
-                        <p>
-                        Lorem ipsum dolor sit amet, in porro albucius qui, in nec quod novum accumsan, mei ludus tamquam dolores id. No sit debitis meliore postulant, per ex prompta alterum sanctus, pro ne quod dicunt sensibus.
-                        </p>
-                        <a href="#" title="read more" class="button-medium">Read more</a>
+                        <h4>Your Industry</h4>
+                        <p>peers have a major impact on your ability to get a loan. See how you compare.</p>
+                        <a href="#" title="read more" class="button-medium">Compare to industry <i class="fa  fa-caret-right"></i></a>
                     </div>
                 </div>
             </section>
