added selector for top background

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     </li>
                                 </ul>
                                 <div class="btn-group pull-right">
-                                    <a role="button" href="loan-types.html" type="button" class="btn btn-default">Find a loan</a>
+                                    <a role="button" href="loan-types.html" type="button" class="btn btn-primary">Find a loan</a>
                                     <a role="button" href="#" type="button" class="btn btn-default">Chat with us</a>
                                 </div>
                             </div>
