--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>SageWorks Lending</title>
+        <title>Sageworks Lending</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="keywords" content="financial analysis, industry benchmarks, credit analysis, business loans, cash flow management, audit and review">
@@ -111,7 +111,7 @@
                     </nav>
                 </header>
                 <div class="cta-hero">
-                    <h1>Find the Right Loan <span>for your business in as little as</span><em> 3 steps</em></h1>
+                    <h1>Find the Right Loan <span>for your business in</span><em> 3 steps</em></h1>
                     <a href="loan-types.html" title="find a loan" class="button-large">Find a loan</a>
                 </div>
             </section>
@@ -145,7 +145,7 @@
             </section>
             <section id="main-area" class="striped-bg">`
                 <div class="cta-hero">
-                    <h2>SageWorks Lending understands your<br>Business needs.</h2>
+                    <h2>Sageworks Lending understands your<br>Business needs.</h2>
                     <a href="how-we-help.html" title="how we help">See how we can help!</a>
                 </div>
             </section>
