--- a/invoice-factoring.html
+++ b/invoice-factoring.html
@@ -4,7 +4,7 @@
     <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>SageWorks Lending</title>
+        <title>Sageworks Lending</title>
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1">
