--- a/loan-types.html
+++ b/loan-types.html
@@ -5,7 +5,7 @@
     <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>SageWorks Lending</title>
+        <title>Sageworks Lending</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="keywords" content="financial analysis, industry benchmarks, credit analysis, business loans, cash flow management, audit and review">
