changed up some style

--- a/loan-types.html
+++ b/loan-types.html
@@ -89,7 +89,7 @@
                         <div id="middle-wizard" class="compare-box">
                             <div class="step row">
                                 <div class="col-xs-12 main-title">
-                                    <h3>Select the best loan for your business.</h3>
+                                    <h3>Find the right loan for your business in 3 steps.</h3>
                                 </div>
                                 <div class="col-xs-12">
                                     <div class="loan-type row">
